Fix navigation links for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
                 <p>DxSure LTD is a company registered in England and Wales. The Companies House number is 15957322.</p>
                 <p>&copy; 2023 DxSure. All rights reserved.</p>
                 <p>
-                    <a href="/privacy">Privacy Notice</a> | 
-                    <a href="/terms">Terms of Use</a>
+                    <a href="privacy.html">Privacy Notice</a> | 
+                    <a href="terms.html">Terms of Use</a>
                 </p>
             </div>
         </div>
