--- a/terms.html
+++ b/terms.html
@@ -14,13 +14,13 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="/">DxSure</a>
+                    <a href="index.html">DxSure</a>
                 </div>
                 <ul class="nav-links">
-                    <li><a href="/#about">About</a></li>
-                    <li><a href="/#expertise">Expertise</a></li>
-                    <li><a href="/#services">Services</a></li>
-                    <li><a href="/#contact" class="btn btn-primary">Contact Us</a></li>
+                    <li><a href="index.html#about">About</a></li>
+                    <li><a href="index.html#expertise">Expertise</a></li>
+                    <li><a href="index.html#services">Services</a></li>
+                    <li><a href="index.html#contact" class="btn btn-primary">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
@@ -45,7 +45,7 @@
                 <p>All content on the DxSure website, including but not limited to text, graphics, logos, images, and software, is the property of DxSure or its content suppliers and is protected by intellectual property laws. You may not reproduce, modify, distribute, or publicly display any content from our website without our prior written consent.</p>
                 
                 <h2>5. Privacy</h2>
-                <p>Your use of our website and services is also governed by our Privacy Policy, which can be found <a href="/privacy">here</a>.</p>
+                <p>Your use of our website and services is also governed by our Privacy Policy, which can be found <a href="privacy.html">here</a>.</p>
                 
                 <h2>6. Limitation of Liability</h2>
                 <p>DxSure's services are provided "as is" without any warranty of any kind. To the fullest extent permitted by law, DxSure shall not be liable for any direct, indirect, incidental, special, consequential, or punitive damages arising out of or in connection with your use of our website or services.</p>
@@ -79,10 +79,10 @@
                 </div>
                 <div class="footer-links">
                     <ul>
-                        <li><a href="/#about">About</a></li>
-                        <li><a href="/#expertise">Expertise</a></li>
-                        <li><a href="/#services">Services</a></li>
-                        <li><a href="/#contact">Contact</a></li>
+                        <li><a href="index.html#about">About</a></li>
+                        <li><a href="index.html#expertise">Expertise</a></li>
+                        <li><a href="index.html#services">Services</a></li>
+                        <li><a href="index.html#contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -90,8 +90,8 @@
                 <p>DxSure LTD is a company registered in England and Wales. The Companies House number is 15957322.</p>
                 <p>&copy; 2023 DxSure. All rights reserved.</p>
                 <p>
-                    <a href="/privacy">Privacy Notice</a> | 
-                    <a href="/terms">Terms of Use</a>
+                    <a href="privacy.html">Privacy Notice</a> | 
+                    <a href="terms.html">Terms of Use</a>
                 </p>
             </div>
         </div>
