--- a/privacy.html
+++ b/privacy.html
@@ -14,13 +14,13 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="/">DxSure</a>
+                    <a href="index.html">DxSure</a>
                 </div>
                 <ul class="nav-links">
-                    <li><a href="/#about">About</a></li>
-                    <li><a href="/#expertise">Expertise</a></li>
-                    <li><a href="/#services">Services</a></li>
-                    <li><a href="/#contact" class="btn btn-primary">Contact Us</a></li>
+                    <li><a href="index.html#about">About</a></li>
+                    <li><a href="index.html#expertise">Expertise</a></li>
+                    <li><a href="index.html#services">Services</a></li>
+                    <li><a href="index.html#contact" class="btn btn-primary">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
@@ -91,10 +91,10 @@
                 </div>
                 <div class="footer-links">
                     <ul>
-                        <li><a href="/#about">About</a></li>
-                        <li><a href="/#expertise">Expertise</a></li>
-                        <li><a href="/#services">Services</a></li>
-                        <li><a href="/#contact">Contact</a></li>
+                        <li><a href="index.html#about">About</a></li>
+                        <li><a href="index.html#expertise">Expertise</a></li>
+                        <li><a href="index.html#services">Services</a></li>
+                        <li><a href="index.html#contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -102,8 +102,8 @@
                 <p>DxSure LTD is a company registered in England and Wales. The Companies House number is 15957322.</p>
                 <p>&copy; 2023 DxSure. All rights reserved.</p>
                 <p>
-                    <a href="/privacy">Privacy Notice</a> | 
-                    <a href="/terms">Terms of Use</a>
+                    <a href="privacy.html">Privacy Notice</a> | 
+                    <a href="terms.html">Terms of Use</a>
                 </p>
             </div>
         </div>
