--- a/index.html
+++ b/index.html
@@ -122,18 +122,15 @@
         <div class="container">
             <h2>Get in Touch</h2>
             <p>Interested in learning more about DxSure or exploring collaboration opportunities? Reach out to us.</p>
-            <form id="contact-form">
-                <div class="form-group">
-                    <input type="text" id="name" name="name" placeholder="Your Name" required>
-                </div>
-                <div class="form-group">
-                    <input type="email" id="email" name="email" placeholder="Your Email" required>
-                </div>
-                <div class="form-group">
-                    <textarea id="message" name="message" placeholder="Your Message" required></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Send Message</button>
-            </form>
+            
+            <div class="google-form-container">
+                <p class="form-note">Fill out the form below or email us directly at <a href="mailto:info@dxsure.uk">info@dxsure.uk</a></p>
+                <!-- Replace the URL below with your actual Google Form embed URL -->
+                <iframe id="google-form" src="https://docs.google.com/forms/d/e/YOUR_FORM_ID/viewform?embedded=true" 
+                    width="100%" height="650" frameborder="0" marginheight="0" marginwidth="0">
+                    Loading…
+                </iframe>
+            </div>
         </div>
     </section>
 
