--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="services-grid">
                 <div class="service-card">
                     <h3>AI Diagnostic Assistance</h3>
-                    <p>Our AI-powered systems analyze multimodal medical data to assist clinicians in making faster, more accurate diagnoses while maintaining human oversight.</p>
+                    <p>Our AI-powered systems analyse multimodal medical data to assist clinicians in making faster, more accurate diagnoses while maintaining human oversight.</p>
                 </div>
                 <div class="service-card">
                     <h3>Regulatory Consulting</h3>
@@ -126,7 +126,7 @@
             <div class="google-form-container">
                 <p class="form-note">Fill out the form below or email us directly at <a href="mailto:info@dxsure.uk">info@dxsure.uk</a></p>
                 <!-- Replace the URL below with your actual Google Form embed URL -->
-                <iframe id="google-form" src="https://docs.google.com/forms/d/e/YOUR_FORM_ID/viewform?embedded=true" 
+                <iframe id="google-form" src="https://docs.google.com/forms/d/e/1FAIpQLSdoeQen6lY13xW7FLwjPXYTJ2CzsYWaFNAMZw0NhExpforBQw/viewform?embedded=true" 
                     width="100%" height="650" frameborder="0" marginheight="0" marginwidth="0">
                     Loading…
                 </iframe>
