--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="images/NewDxSureLogo.png">
 </head>
 <body>
     <header>
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="/">DxSure</a>
+                    <a href="index.html">
+                        <img src="images/NewDxSureLogo.png" alt="DxSure Logo" class="logo-image">
+                    </a>
                 </div>
                 <ul class="nav-links">
                     <li><a href="#about">About</a></li>
@@ -139,7 +142,8 @@
             <div class="footer-content">
                 <div class="footer-logo">
                     <h3>DxSure</h3>
-                    <p>Making medical diagnostics accessible, reliable, and trustworthy for healthcare providers worldwide.</p>
+                    <img src="images/NewDxSureLogo.png" alt="DxSure Logo" class="footer-logo-image">
+    <p>Making medical diagnostics accessible, reliable, and trustworthy for healthcare providers worldwide.</p>
                 </div>
                 <div class="footer-links">
                     <ul>
